[gd_scene load_steps=37 format=3 uid="uid://bqx05bxue6jo3"]

[ext_resource type="Script" uid="uid://cco7m8w2h2asw" path="res://boss_room_secret.gd" id="1_1q4yb"]
[ext_resource type="Texture2D" uid="uid://c1lo75th7b88g" path="res://Textures/icon.svg" id="2_hb1u1"]
[ext_resource type="PackedScene" uid="uid://drh5mw5jb3hga" path="res://Scenes/Objects/platform.tscn" id="3_3tye1"]
[ext_resource type="PackedScene" uid="uid://be53snhq2r11i" path="res://Scenes/player.tscn" id="4_82mqd"]
[ext_resource type="AudioStream" uid="uid://ct1jew35g1sj7" path="res://Sounds/Bingus/bingus_intro.mp3" id="5_3tye1"]
[ext_resource type="AudioStream" uid="uid://ddraxqwqibe0y" path="res://Music/bingus.mp3" id="5_hb1u1"]
[ext_resource type="Script" uid="uid://b5fv6t5l6yo7d" path="res://bingus.gd" id="5_o8bb2"]
[ext_resource type="AudioStream" uid="uid://d2v0pur38hhmr" path="res://Sounds/Bingus/Weapon.ogg" id="6_82mqd"]
[ext_resource type="AudioStream" uid="uid://1s7svvue0wot" path="res://Sounds/Bingus/RailgunChargeup.ogg" id="8_byys1"]
[ext_resource type="AudioStream" uid="uid://d0rpyw1ofwops" path="res://Sounds/Bingus/RailgunFire.ogg" id="9_f43f5"]
[ext_resource type="Texture2D" uid="uid://bhre4awlrdtu4" path="res://Textures/warning_v2.png" id="10_yxxnr"]
[ext_resource type="Texture2D" uid="uid://dwnrg554ppleb" path="res://Textures/warning_v.png" id="11_d8sua"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w82vf"]
size = Vector2(22, 610)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v638s"]
size = Vector2(1191, 19)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vuilr"]
size = Vector2(711, 19.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5y65l"]
size = Vector2(772.368, 19.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tjvdc"]
size = Vector2(237, 20)

[sub_resource type="Animation" id="Animation_hnpp2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(862, 658)]
}

[sub_resource type="Animation" id="Animation_tjvdc"]
resource_name = "lower"
length = 3.0
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(3, 1),
"update": 0,
"values": [Vector2(862, 658), Vector2(862, 950)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w82vf"]
_data = {
&"RESET": SubResource("Animation_hnpp2"),
&"lower": SubResource("Animation_tjvdc")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b8t2r"]
size = Vector2(880, 395)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ya6cy"]
size = Vector2(22, 182)

[sub_resource type="Animation" id="Animation_u78rf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Entrance:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -179)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Exit:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_71aqr"]
resource_name = "close"
length = 0.5
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Entrance:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -179), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_vvxw6"]
resource_name = "open"
length = 2.0
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Exit:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -179)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xmk8r"]
_data = {
&"RESET": SubResource("Animation_u78rf"),
&"close": SubResource("Animation_71aqr"),
&"open": SubResource("Animation_vvxw6")
}

[sub_resource type="BoxMesh" id="BoxMesh_hb1u1"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_mouke"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_33bsm"]
size = Vector2(78, 3419)

[sub_resource type="SpriteFrames" id="SpriteFrames_6ka00"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_yxxnr")
}, {
"duration": 1.0,
"texture": ExtResource("11_d8sua")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="Animation" id="Animation_o8bb2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(827, -807)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sounfx/Intro:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Flash:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Flash:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Titles:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Sprite2D:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2.75, 4.308)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Sprite2D:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Sounfx/Weapon:playing")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Sounfx/RailCharge:playing")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Lasers/Loc1/Telegraph:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Lasers/Loc2/Telegraph:visible")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("Lasers/Loc1/MeshInstance2D:scale")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1706)]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("Lasers/Loc2/MeshInstance2D:scale")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1706)]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("Sounfx/RailFire:playing")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_82mqd"]
resource_name = "intro"
length = 7.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 4.3, 7.5),
"transitions": PackedFloat32Array(1, 0.5, 1, 1),
"update": 0,
"values": [Vector2(870, -807), Vector2(870, -807), Vector2(870, 250), Vector2(870, 250)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sounfx/Intro:playing")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Flash:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 4.7, 5.2, 7.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Flash:visible")
tracks/3/interp = 0
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 4.7, 7.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Titles:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 4.7, 7.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D:self_modulate")
tracks/5/interp = 0
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 4.7, 7.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ey6gl"]
resource_name = "laser_prep"
length = 0.6
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Lasers/Loc1/Telegraph:visible")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sounfx/RailCharge:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Lasers/Loc2/Telegraph:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_n23fy"]
resource_name = "laser_shoot"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Lasers/Loc1/MeshInstance2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(80, 1706), Vector2(0, 1706)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Lasers/Loc2/MeshInstance2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(80, 1706), Vector2(0, 1706)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sounfx/RailFire:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_irj3s"]
resource_name = "start"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2.75, 4.308), Vector2(1.2, 1.879)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sounfx/Weapon:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_irj3s"]
_data = {
&"RESET": SubResource("Animation_o8bb2"),
&"intro": SubResource("Animation_82mqd"),
&"laser_prep": SubResource("Animation_ey6gl"),
&"laser_shoot": SubResource("Animation_n23fy"),
&"start": SubResource("Animation_irj3s")
}

[node name="BossRoom" type="Node2D"]
script = ExtResource("1_1q4yb")

[node name="Floors-Walls" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="Sprite2D" type="Sprite2D" parent="Floors-Walls"]
position = Vector2(11.5, 188)
scale = Vector2(0.179687, 4.39062)
texture = ExtResource("2_hb1u1")

[node name="Sprite2D2" type="Sprite2D" parent="Floors-Walls"]
position = Vector2(1722, 188.25)
scale = Vector2(0.179687, 4.39453)
texture = ExtResource("2_hb1u1")

[node name="Sprite2D4" type="Sprite2D" parent="Floors-Walls"]
position = Vector2(863, 658)
scale = Vector2(9.309, 0.156)
texture = ExtResource("2_hb1u1")

[node name="Sprite2D5" type="Sprite2D" parent="Floors-Walls"]
position = Vector2(-333, 658)
scale = Vector2(5.537, 0.156)
texture = ExtResource("2_hb1u1")

[node name="Sprite2D6" type="Sprite2D" parent="Floors-Walls"]
position = Vector2(2096.37, 657.984)
scale = Vector2(6.02138, 0.156)
texture = ExtResource("2_hb1u1")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Floors-Walls"]
position = Vector2(11, 188)
shape = SubResource("RectangleShape2D_w82vf")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Floors-Walls"]
position = Vector2(1721, 212)
shape = SubResource("RectangleShape2D_w82vf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floors-Walls"]
position = Vector2(862.5, 657.5)
shape = SubResource("RectangleShape2D_v638s")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Floors-Walls"]
position = Vector2(-333.5, 658.25)
shape = SubResource("RectangleShape2D_vuilr")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Floors-Walls"]
position = Vector2(2096.18, 658.234)
shape = SubResource("RectangleShape2D_5y65l")

[node name="Trapforms" type="StaticBody2D" parent="."]
position = Vector2(862, 658)
collision_layer = 2
collision_mask = 0

[node name="Sprite2D2" type="Sprite2D" parent="Trapforms"]
position = Vector2(720, 0)
scale = Vector2(1.89062, 0.15625)
texture = ExtResource("2_hb1u1")

[node name="Sprite2D" type="Sprite2D" parent="Trapforms"]
position = Vector2(-716, -3.8147e-06)
scale = Vector2(1.85938, 0.15625)
texture = ExtResource("2_hb1u1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trapforms"]
position = Vector2(-716.5, 0)
shape = SubResource("RectangleShape2D_tjvdc")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Trapforms"]
position = Vector2(720, 0)
shape = SubResource("RectangleShape2D_tjvdc")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Trapforms"]
libraries = {
&"": SubResource("AnimationLibrary_w82vf")
}

[node name="DoorChecker" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorChecker"]
position = Vector2(-250, 470.5)
shape = SubResource("RectangleShape2D_b8t2r")

[node name="CheckDoor" type="Timer" parent="DoorChecker"]
wait_time = 0.5
autostart = true
ignore_time_scale = true

[node name="Doors" type="Node2D" parent="."]

[node name="Entrance" type="StaticBody2D" parent="Doors"]
position = Vector2(0, -179)
collision_layer = 2
collision_mask = 0

[node name="Sprite2D" type="Sprite2D" parent="Doors/Entrance"]
position = Vector2(11, 557.5)
scale = Vector2(0.171875, 1.41406)
texture = ExtResource("2_hb1u1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Doors/Entrance"]
position = Vector2(11, 557)
shape = SubResource("RectangleShape2D_ya6cy")

[node name="Exit" type="StaticBody2D" parent="Doors"]
collision_layer = 2
collision_mask = 0

[node name="Sprite2D" type="Sprite2D" parent="Doors/Exit"]
position = Vector2(1721, 557.5)
scale = Vector2(0.171875, 1.41406)
texture = ExtResource("2_hb1u1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Doors/Exit"]
position = Vector2(1721, 557)
shape = SubResource("RectangleShape2D_ya6cy")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Doors"]
libraries = {
&"": SubResource("AnimationLibrary_xmk8r")
}

[node name="Platforms" type="Node2D" parent="."]

[node name="Platform" parent="Platforms" instance=ExtResource("3_3tye1")]
position = Vector2(447, 512)
scale = Vector2(5.56, 4)

[node name="Platform2" parent="Platforms" instance=ExtResource("3_3tye1")]
position = Vector2(1286, 512)
scale = Vector2(5.56, 4)

[node name="ArenaCam" type="Camera2D" parent="."]
position = Vector2(867, 292)
enabled = false
zoom = Vector2(0.65, 0.65)

[node name="Player" parent="." instance=ExtResource("4_82mqd")]
position = Vector2(-509, 540)

[node name="Boundaries" type="Node2D" parent="."]

[node name="Left" type="Marker2D" parent="Boundaries"]
position = Vector2(106, 317)

[node name="Right" type="Marker2D" parent="Boundaries"]
position = Vector2(1639, 338)

[node name="Up" type="Marker2D" parent="Boundaries"]
position = Vector2(852, -76)

[node name="Down" type="Marker2D" parent="Boundaries"]
position = Vector2(864, 589)

[node name="Boss" type="CharacterBody2D" parent="." node_paths=PackedStringArray("bound") groups=["Enemies"]]
position = Vector2(827, -807)
script = ExtResource("5_o8bb2")
bound = NodePath("../Boundaries")
speed = 200

[node name="Sprite2D" type="Sprite2D" parent="Boss"]
self_modulate = Color(0, 0, 0, 1)
scale = Vector2(2.75, 4.308)
texture = ExtResource("2_hb1u1")

[node name="Flash" type="MeshInstance2D" parent="Boss"]
visible = false
z_index = 5
position = Vector2(3, 144.875)
scale = Vector2(2097.5, 1306.25)
mesh = SubResource("BoxMesh_hb1u1")
metadata/_edit_lock_ = true

[node name="Sounfx" type="Node2D" parent="Boss"]

[node name="Intro" type="AudioStreamPlayer2D" parent="Boss/Sounfx"]
stream = ExtResource("5_3tye1")
volume_db = 3.0

[node name="Weapon" type="AudioStreamPlayer2D" parent="Boss/Sounfx"]
stream = ExtResource("6_82mqd")

[node name="RailCharge" type="AudioStreamPlayer2D" parent="Boss/Sounfx"]
stream = ExtResource("8_byys1")
volume_db = 3.0

[node name="RailFire" type="AudioStreamPlayer2D" parent="Boss/Sounfx"]
stream = ExtResource("9_f43f5")
volume_db = 4.0

[node name="Lasers" type="Node2D" parent="Boss"]

[node name="Loc1" type="Area2D" parent="Boss/Lasers"]
z_index = 2
position = Vector2(-24, 3)

[node name="MeshInstance2D" type="MeshInstance2D" parent="Boss/Lasers/Loc1"]
self_modulate = Color(1, 1, 0, 1)
position = Vector2(0.500025, 1705)
scale = Vector2(1e-05, 1706)
mesh = SubResource("CapsuleMesh_mouke")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boss/Lasers/Loc1"]
position = Vector2(1, 1699.5)
shape = SubResource("RectangleShape2D_33bsm")

[node name="Telegraph" type="AnimatedSprite2D" parent="Boss/Lasers/Loc1"]
visible = false
position = Vector2(-0.5, 1740)
scale = Vector2(0.0599999, 54.3438)
sprite_frames = SubResource("SpriteFrames_6ka00")
autoplay = "default"
frame_progress = 0.799113

[node name="Loc2" type="Area2D" parent="Boss/Lasers"]
z_index = 2
position = Vector2(25, 3)

[node name="MeshInstance2D" type="MeshInstance2D" parent="Boss/Lasers/Loc2"]
self_modulate = Color(1, 1, 0, 1)
position = Vector2(0.500025, 1705)
scale = Vector2(1e-05, 1706)
mesh = SubResource("CapsuleMesh_mouke")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boss/Lasers/Loc2"]
position = Vector2(1, 1699.5)
shape = SubResource("RectangleShape2D_33bsm")

[node name="Telegraph" type="AnimatedSprite2D" parent="Boss/Lasers/Loc2"]
visible = false
position = Vector2(-0.5, 1740)
scale = Vector2(0.0599999, 54.3438)
sprite_frames = SubResource("SpriteFrames_6ka00")
autoplay = "default"
frame_progress = 0.618993

[node name="Titles" type="Control" parent="Boss"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = -31.0
offset_top = -129.0
offset_right = 9.0
offset_bottom = -89.0

[node name="Title" type="Label" parent="Boss/Titles"]
layout_mode = 0
offset_left = -445.0
offset_top = -358.0
offset_right = 486.0
offset_bottom = -110.0
theme_override_font_sizes/font_size = 156
text = "B.I.N.G.U.S"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Subtitle1" type="Label" parent="Boss/Titles"]
layout_mode = 0
offset_left = -770.0
offset_top = 92.0
offset_right = -165.0
offset_bottom = 162.0
theme_override_font_sizes/font_size = 51
text = "Battle Integrated Noxus-"

[node name="Subtitle2" type="Label" parent="Boss/Titles"]
layout_mode = 0
offset_left = 231.0
offset_top = 92.0
offset_right = 836.0
offset_bottom = 162.0
theme_override_font_sizes/font_size = 51
text = "Grenade Ultra Sentinel"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Boss"]
libraries = {
&"": SubResource("AnimationLibrary_irj3s")
}

[node name="Laser" type="Timer" parent="Boss"]
wait_time = 2.0

[node name="Grenade" type="Timer" parent="Boss"]
wait_time = 2.0
one_shot = true

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_hb1u1")

[connection signal="timeout" from="DoorChecker/CheckDoor" to="." method="_on_check_door_timeout"]
[connection signal="timeout" from="Boss/Laser" to="Boss" method="_on_laser_timeout"]
[connection signal="timeout" from="Boss/Grenade" to="Boss" method="_on_grenade_timeout"]
